# quickfixr

./: Cargo.toml
src/: lib.rs  main.rs
src/quickfix/: application.rs  main2.rs  main3.rs  main4.rs  main5.rs  mod.rs  session.rs
src/quickfix/message/: field.rs  field_key.rs  header.rs  message.rs  message_factory.rs  message_fix44.rs  message_read.rs  message_reader.rs  mod.rs  msg_type.rs
