[package]
name = "quickfixr"
version = "0.1.0"
authors = ["teruuu <ariteru0916@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
actix = "0.10.0-alpha.3"
actix-rt = "1.1.1"
async-std = "1.6.2"
chrono = "0.4.11"
crossbeam = "0.7.3"
futures = "0.3"
lazy_static = "1.4.0"
rand = "0.7.3"
runtime = "0.0.0"